# autonomous-lab

./: .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  install_log.txt  mkdocs.yml  node_start_cmd.txt  preset.rviz  test_bench_urdf.urdf.xacro
Marvelmind_RTLS/: dashboard.sh
Marvelmind_RTLS/x86/: global_params.ini  versions_table.ini
Marvelmind_RTLS/x86/actions/: actions_2024_04_09__1644.csv  actions_2024_04_09__1652.csv  actions_2024_04_09__1739.csv  actions_2024_04_09__1741.csv  actions_2024_04_11__0934.csv  actions_2024_04_11__1001.csv  actions_2024_04_15__1420.csv  actions_2024_04_15__1457.csv
Marvelmind_RTLS/x86/defaults/: _last_defaults_tmp.ini  template_default_beacon_ultrasound.ini
Marvelmind_RTLS/x86/events/: boot_events.csv
Marvelmind_RTLS/x86/logs/: 2024_04_09__164717__Marvelmind_log.csv  2024_04_09__174143__Marvelmind_log.csv  2024_04_15__142241__Marvelmind_log.csv
Marvelmind_RTLS/x86/map_build/: history.csv  map_state_2024_04_09__174523_884.ini  map_state_2024_04_09__174527_468.ini
Marvelmind_RTLS/x86/maps/: map_2024_04_09__1745_autosave.ini
ROS2_Bridge/: Dockerfile  bridge_entry.sh
ROS2_Master/: Dockerfile
ROS2_Master/sensor_params/: FLIR_camera.yaml  bno055_params.yaml  marvelmind_ros2_config.yaml
ROS2_Master/test_bench_ws/: init_ws.sh  test_bench.rviz
docs/: about.md  conf.py  editing.md  index.md  index.rst  software.md
sensor_params_links/: FLIR_camera.yaml  bno055_params.yaml  marvelmind_ros2_config.yaml
test_bench_ws/: init_ws.sh
test_bench_ws/src/: setup.py
test_bench_ws/src/test_bench/: CMakeLists.txt  package.xml  setup.cfg  setup.py
test_bench_ws/src/test_bench/config/: FLIR_camera.yaml
test_bench_ws/src/test_bench/launch/: FLIR.launch.py  LIDAR.launch.py  test_bench.launch.py
test_bench_ws/src/test_bench/urdf/: FLIR.xacro  LIDAR.xacro  REALSENSE.xacro  test_bench_core.xacro
(+11 files in other folders)
